
- handling of comments does probable not work for all cases


development version
===================

0.9.6
-----

HEAD

0.9.6b1 090609
    + BUGFIX: Fixed ``CSSPageRule.selectorText = ''`` which does reset the selector now

    + BUGFIX (minor): Removed false references in a few modules' ``__all__`` list

    - IMPROVEMENT: Jython 2.5 (from RC4) runs all tests now but a few changes had to be done:
        - exception messages sometimes do have a different format in Jython and Python (but also between Python versions >= 2.5 and < 2.4 ...)
        - Jython's ``xml.dom.Exception`` misses attribute ``args`` it seems
        - **UPDATE: Problem was fixed in Jython 2.5RC4.** Jython's ``urllib.path2url`` seems broken, added a workaround which is kind of naive and tested on Windows only yet.



0.9.6a4 090509
    - **API CHANGE**: Reverted handling of exceptions (issue #24) as this did not work with PyXML installed. You may again use ``str(e)`` on any raised xml.dom.Exception ``e``. Since 0.9.6a0 exceptions raised did raise a tuple of message, line and col information. Now the message alone is raised (again). Line and col information is still available as ``e.line, e.col``.

    + BUGFIX: Fixed issue #22 parsing or actually reserializing of values like ``content: "\\"``

    + BUGFIX: All examples at http://www.w3.org/TR/2009/CR-CSS2-20090423/syndata.html#illegalvalues should work now as expected:
        - Unknown ATKEYWORD tokens in selectors make these invalid now, see example : ``p @here {color: red}``
        - completion of incomplete @media rule like ``@media screen { p:before { content: 'Hello`` does work now when parsing with a non raising parser

    - **FEATURE**: Updated some parts to http://www.w3.org/TR/2009/CR-CSS2-20090423/changes.html#new (most changes decribed there were already done in cssutils)
        + updated tokenizer macro ``escape``
        + replaced media ``aural`` with ``speech``
        + property ``content`` has allowed value ``none`` now